@@ -1,13 +1,14 @@
 package org.example.spring_mini_project.service.serviceimpl;
 
 import org.example.spring_mini_project.model.entity.Category;
+import org.example.spring_mini_project.model.entity.Comment;
 import org.example.spring_mini_project.model.entity.User;
 import org.example.spring_mini_project.model.enumeration.SortDirection;
 import org.example.spring_mini_project.model.request.CategoryRequest;
+import org.example.spring_mini_project.model.response.ArticleResponse;
 import org.example.spring_mini_project.model.response.CategoryResponse;
-import org.example.spring_mini_project.repository.CategoryArticleRepository;
-import org.example.spring_mini_project.repository.CategoryRepository;
-import org.example.spring_mini_project.repository.UserRepository;
+import org.example.spring_mini_project.model.response.CommentResponse;
+import org.example.spring_mini_project.repository.*;
 import org.example.spring_mini_project.service.CategoryService;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -18,17 +19,20 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImplement implements CategoryService {
     private final CategoryRepository categoryRepository;
     private final UserRepository userRepository;
     private final CategoryArticleRepository categoryArticleRepository;
-    public CategoryServiceImplement(CategoryRepository categoryRepository, UserRepository userRepository, CategoryArticleRepository categoryArticleRepository) {
+    private final ArticleRepository articleRepository;
+    private final CommentRepository commentRepository;
+    public CategoryServiceImplement(CategoryRepository categoryRepository, UserRepository userRepository, CategoryArticleRepository categoryArticleRepository, ArticleRepository articleRepository, CommentRepository commentRepository) {
         this.categoryRepository = categoryRepository;
         this.userRepository = userRepository;
         this.categoryArticleRepository = categoryArticleRepository;
+        this.articleRepository = articleRepository;
+        this.commentRepository = commentRepository;
     }
 
     @Override
@@ -47,7 +51,20 @@ public class CategoryServiceImplement implements CategoryService {
         Category category = categoryRepository.findCategoryByUserEmailAndCategoryId(getUserCurrentEmail(),categoryId);
         CategoryResponse categoryResponse = category.toResponse();
         categoryResponse.setAmountOfArticle(categoryArticleRepository.countAllByCategoryCategoryId(categoryId));
+        List<ArticleResponse> articleResponses = toArticleResponses();
+        categoryResponse.setArticleList(articleResponses);
         return categoryResponse;
+    }
+
+    private List<ArticleResponse> toArticleResponses() {
+        return articleRepository.findAll()
+                .stream().map(article -> {
+                    ArticleResponse articleResponse = article.toResponse();
+                    List<CommentResponse> commentResponses = commentRepository.findCommentsByArticleArticleId(article.getArticleId())
+                                    .stream().map(Comment::toResponse).toList();
+                    articleResponse.setComments(commentResponses);
+                    return articleResponse;
+                }).toList();
     }
 
     @Override
@@ -55,12 +72,15 @@ public class CategoryServiceImplement implements CategoryService {
         Sort sort = sortDirection.name().equalsIgnoreCase(Sort.Direction.ASC.name())?
                 Sort.by(sortBy).ascending():Sort.by(sortBy).descending();
         Pageable pageable = PageRequest.of(pageNumber-1,pageSize,sort);
+
         return categoryRepository.findAllByUserEmail(pageable,getUserCurrentEmail())
                 .getContent().stream().map(category -> {
+                    toArticleResponses();
                     CategoryResponse categoryResponse = category.toResponse();
                     categoryResponse.setAmountOfArticle(categoryArticleRepository.countAllByCategoryCategoryId(category.getCategoryId()));
+                    categoryResponse.setArticleList(toArticleResponses());
                     return categoryResponse;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     @Override
